# rust-first-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  grcov-html.yaml  grcov-lcov.yaml
.do/: app.yaml
.github/workflows/: check-and-lint.yaml  test.yaml
src/: cli.rs  main.rs
src/domain/: exception.rs  mod.rs
src/domain/entity/: user_entity.rs
src/domain/repository/: user_repo.rs
src/infrastructure/: mod.rs  response.rs
src/infrastructure/cli/: ui.rs
src/infrastructure/controller/: catchers_ctrl.rs  common_ctrl.rs  create_user_ctrl.rs  get_all_users_ctrl.rs  mod.rs  users_ctrl.rs
src/infrastructure/repository/: mod.rs  user_inmemory_repo.rs  user_supabase_repo.rs
src/usecase/: create_user_usecase.rs  find_user_usecase.rs  get_all_users_usecase.rs  mod.rs  remove_user_usecase.rs  update_user_usecase.rs
