[package]
name = "rust-first-api"
version = "0.1.0"
edition = "2021"

[dependencies.uuid]
version = "1.3.0"
features = ["v4"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.serde]
version = "1.0.152"
features = ["derive"]
