[package]
name = "rust-first-api"
version = "0.1.0"
edition = "2021"

[dependencies]
postgrest = "1.5.0"
dotenv = "0.15.0"
tui = { version = "0.19.0", features = ["crossterm"], default-features = false}
crossterm = "0.26.1"
uuid = { version = "1.3.0", features = ["v4"] }
rocket ={ version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = 'api' 
path = "src/main.rs"

[[bin]]
name = 'cli'
path = "src/cli.rs"

